[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws","macros"] }
futures = "0.3.28"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.20.0"
hyper = "1.3.1"
bytes = "1.6.0"
cocoa = "0.25.0"
objc = "0.2.7"
plist = "1.7.0"
